[FIX] editing discrete color mapping did not match the order of the property's values. Probably behaved similarly for non-color mappings. Needs testing.

--- a/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
+++ b/src/app/components/parts/main-mappings-new-form/main-mappings-new-form.component.html
@@ -197,7 +197,7 @@
                  class="form-control form-control-color"
                  id="colorDiscrete{{index}}"
                  name="colorDiscrete{{index}}"
-                 value="{{mappingDiscrete.useValue[index] ? mappingDiscrete.values[getIndexByKey(entry)] : '#ffffff'}}">
+                 value="{{mappingDiscrete.values[getIndexByKey(entry)]}}">
         </div>
         <div *ngIf="needsColorValidation(styleProperty)" class="col-1">
           <input [(ngModel)]="mappingDiscrete.useValue[index]"
